[gd_scene load_steps=50 format=3 uid="uid://cea171bvv5f7q"]

[ext_resource type="Script" path="res://scripts/skeleton.gd" id="1_t0sfo"]
[ext_resource type="Texture2D" uid="uid://bbrcam0jf0prb" path="res://assets/Skeleton/Sprite Sheets/Skeleton Idle.png" id="2_7tlwl"]
[ext_resource type="Texture2D" uid="uid://c6wy6r2bpxme2" path="res://assets/Skeleton/Sprite Sheets/Skeleton Attack.png" id="3_575f0"]
[ext_resource type="Texture2D" uid="uid://cl5td3kd1g42w" path="res://assets/Skeleton/Sprite Sheets/Skeleton Walk.png" id="4_ttv6g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_15rns"]
size = Vector2(22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfnv0"]
atlas = ExtResource("2_7tlwl")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh8ud"]
atlas = ExtResource("2_7tlwl")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_doqc6"]
atlas = ExtResource("2_7tlwl")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfva4"]
atlas = ExtResource("2_7tlwl")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_861h4"]
atlas = ExtResource("2_7tlwl")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gy7e"]
atlas = ExtResource("2_7tlwl")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnpls"]
atlas = ExtResource("2_7tlwl")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eokp"]
atlas = ExtResource("2_7tlwl")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbqdl"]
atlas = ExtResource("2_7tlwl")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5xhc"]
atlas = ExtResource("2_7tlwl")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gksgg"]
atlas = ExtResource("2_7tlwl")
region = Rect2(240, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oljjc"]
atlas = ExtResource("3_575f0")
region = Rect2(0, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_112r7"]
atlas = ExtResource("3_575f0")
region = Rect2(43, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5o6t"]
atlas = ExtResource("3_575f0")
region = Rect2(86, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j75c"]
atlas = ExtResource("3_575f0")
region = Rect2(129, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wul0"]
atlas = ExtResource("3_575f0")
region = Rect2(172, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l8cg"]
atlas = ExtResource("3_575f0")
region = Rect2(215, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0m05"]
atlas = ExtResource("3_575f0")
region = Rect2(258, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w5rp"]
atlas = ExtResource("3_575f0")
region = Rect2(301, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yjkd"]
atlas = ExtResource("3_575f0")
region = Rect2(344, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyr4v"]
atlas = ExtResource("3_575f0")
region = Rect2(387, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa5ht"]
atlas = ExtResource("3_575f0")
region = Rect2(430, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsgay"]
atlas = ExtResource("3_575f0")
region = Rect2(473, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hvmp"]
atlas = ExtResource("3_575f0")
region = Rect2(516, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i7ql"]
atlas = ExtResource("3_575f0")
region = Rect2(559, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm0b7"]
atlas = ExtResource("3_575f0")
region = Rect2(602, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5tjd"]
atlas = ExtResource("3_575f0")
region = Rect2(645, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_00sic"]
atlas = ExtResource("3_575f0")
region = Rect2(688, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp6yr"]
atlas = ExtResource("3_575f0")
region = Rect2(731, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_u23cm"]
atlas = ExtResource("4_ttv6g")
region = Rect2(0, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7pos"]
atlas = ExtResource("4_ttv6g")
region = Rect2(22, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqdsn"]
atlas = ExtResource("4_ttv6g")
region = Rect2(44, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yx37"]
atlas = ExtResource("4_ttv6g")
region = Rect2(66, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_533qv"]
atlas = ExtResource("4_ttv6g")
region = Rect2(88, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_asdti"]
atlas = ExtResource("4_ttv6g")
region = Rect2(110, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6aem"]
atlas = ExtResource("4_ttv6g")
region = Rect2(132, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8a2q"]
atlas = ExtResource("4_ttv6g")
region = Rect2(154, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc66c"]
atlas = ExtResource("4_ttv6g")
region = Rect2(176, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqr6k"]
atlas = ExtResource("4_ttv6g")
region = Rect2(198, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbjgs"]
atlas = ExtResource("4_ttv6g")
region = Rect2(220, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpxod"]
atlas = ExtResource("4_ttv6g")
region = Rect2(242, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_55kfx"]
atlas = ExtResource("4_ttv6g")
region = Rect2(264, 0, 22, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_ho76v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfnv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh8ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doqc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfva4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_861h4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gy7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnpls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eokp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbqdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5xhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gksgg")
}],
"loop": true,
"name": &"default",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oljjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_112r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5o6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j75c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wul0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l8cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0m05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w5rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yjkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyr4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa5ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsgay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hvmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i7ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm0b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5tjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00sic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp6yr")
}],
"loop": false,
"name": &"hit",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u23cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7pos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqdsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yx37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_533qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asdti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6aem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8a2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc66c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqr6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbjgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpxod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55kfx")
}],
"loop": true,
"name": &"moving_right",
"speed": 18.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cvtd8"]
radius = 19.0263

[node name="Skeleton" type="CharacterBody2D"]
script = ExtResource("1_t0sfo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -6.5)
shape = SubResource("RectangleShape2D_15rns")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -7)
sprite_frames = SubResource("SpriteFrames_ho76v")
animation = &"hit"

[node name="DetectionRange" type="Area2D" parent="."]
position = Vector2(-3, 0)
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2(4, -7)
shape = SubResource("CircleShape2D_cvtd8")

[connection signal="area_entered" from="DetectionRange" to="." method="_on_detection_range_area_entered"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
